--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -10,5 +10,28 @@
 </head>
 <body>
     
+    <div class="container">
+        <section>
+            <div class="wrapper">
+                <label for="bill" class="lbl">
+                    Bill
+                </label>
+                <div class="input-box">
+                    <span>£</span>
+                    <input type="number" id="bill" class="val" value = "0.00">
+                </div>
+            </div>
+            <div class="wrapper">
+                <span class="lbl">Tip</span>
+                <span id="tip-amount" class="val">£0</span>
+            </div>
+            <hr>
+            <div class="wrapper">
+                <span class="lbl">Total Amount</span>
+                <span id="total-amount" class="val">£0</span>
+            </div>
+        </section>
+    </div>
+
 </body>
 </html>
