--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -11,6 +11,7 @@
 <body>
     
     <div class="container">
+
         <section>
             <div class="wrapper">
                 <label for="bill" class="lbl">
@@ -31,7 +32,35 @@
                 <span id="total-amount" class="val">£0</span>
             </div>
         </section>
-    </div>
 
+        <section>
+            <div class="wrapper">
+                <label for="tip" class="lbl">Tip %</label>
+                <span id="tip-percent" class="val">0</span>
+            </div>
+            <input type="range" id="tip" min="0" max="100" value="15">
+            <div class="wrapper">
+                <label for="no-of-people" class="lbl">
+                    No. of People
+                </label>
+                <span id="split-num" class="val">0</span>
+            </div>
+            <input type="range" id="no-of-people" min="1" max="15" value="1">
+        </section>
+
+        <section>
+            <div class="wrapper">
+                <span class="lbl">Tip Per Person</span>
+                <span id="tip-per-person" class="val">
+                    0
+                </span>
+            </div>
+            <div class="wrapper">
+                <span class="lbl">Total Per Person</span>
+                <span id="total-per-person" class="val">
+                    £0
+                </span>
+        </section>
+    </div>
 </body>
 </html>
