--- a/Dice/index.html
+++ b/Dice/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="wrapper">
         <h1 id="title">Dice Roll</h1>
-        <p id="roll-value">0</p>
+        <p id="roll-value"></p>
         <button id="btn">Roll</button>
       </div>
     </div>
