--- a/Landing/index.html
+++ b/Landing/index.html
@@ -6,16 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Astra</title>
   </head>
   <body>
     <nav>
-      <h1>Logo</h1>
+      <h1>Astra</h1>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+
+    <main>
+      <section class="hero">
+        <h1>
+          The World's No.1 Wholesaler
+          <br />
+          <span>ASTRA</span>
+        </h1>
+      </section>
+
+      <section class="products">
+        <container class="contents">
+          <div class="card">
+            <img src="#" alt="Product Image" />
+            <h3>Product Name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="#" alt="Product Image" />
+            <h3>Product Name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="#" alt="Product Image" />
+            <h3>Product Name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quae.
+            </p>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+        </container>
+      </section>
+    </main>
   </body>
 </html>
