product section working and styled, sometimes has side scroll bug. As of writing there is no bug

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -29,32 +29,48 @@
 
       <section class="products">
         <container class="contents">
-          <div class="card">
-            <img src="#" alt="Product Image" />
-            <h3>Product Name</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
-            </p>
-          </div>
 
           <div class="card">
-            <img src="#" alt="Product Image" />
-            <h3>Product Name</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
-            </p>
-          </div>
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1564466809058-bf4114d55352?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=772&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>      
 
           <div class="card">
-            <img src="#" alt="Product Image" />
-            <h3>Product Name</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quae.
-            </p>
-          </div>
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>      
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1598&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>      
 
           <div class="card">
             <div class="content">
@@ -69,6 +85,36 @@
               </p>
             </div>
           </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1586495777744-4413f21062fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=830&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
+                alt="Product Image"
+              />
+              <h3>Product Name</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>      
+          
+
         </container>
       </section>
     </main>
