responsive design done, need to make navbar responsive, add some hover effects

--- a/Landing/index.html
+++ b/Landing/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Ms+Madi&family=Roboto+Mono:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Astra</title>
   </head>
   <body>
     <nav>
-      <h1>Astra</h1>
+      <h1>Roset</h1>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -21,64 +27,21 @@
     <main>
       <section class="hero">
         <h1>
-          The World's No.1 Wholesaler
+          The World's No.1 Flower Store
           <br />
-          <span>ASTRA</span>
+          <span>Roset</span>
         </h1>
       </section>
 
       <section class="products">
         <container class="contents">
-
           <div class="card">
             <div class="content">
               <img
-                src="https://images.unsplash.com/photo-1564466809058-bf4114d55352?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=772&q=80"
+                src="https://images.unsplash.com/photo-1527061011665-3652c757a4d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=772&q=80"
                 alt="Product Image"
               />
-              <h3>Product Name</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quae.
-              </p>
-            </div>
-          </div>      
-
-          <div class="card">
-            <div class="content">
-              <img
-                src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80"
-                alt="Product Image"
-              />
-              <h3>Product Name</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quae.
-              </p>
-            </div>
-          </div>      
-
-          <div class="card">
-            <div class="content">
-              <img
-                src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1598&q=80"
-                alt="Product Image"
-              />
-              <h3>Product Name</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam, quae.
-              </p>
-            </div>
-          </div>      
-
-          <div class="card">
-            <div class="content">
-              <img
-                src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                alt="Product Image"
-              />
-              <h3>Product Name</h3>
+              <h3>Flowers 1</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quisquam, quae.
@@ -89,10 +52,10 @@
           <div class="card">
             <div class="content">
               <img
-                src="https://images.unsplash.com/photo-1586495777744-4413f21062fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=830&q=80"
+                src="https://images.unsplash.com/photo-1464820453369-31d2c0b651af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1160&q=80"
                 alt="Product Image"
               />
-              <h3>Product Name</h3>
+              <h3>Flowers 2</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quisquam, quae.
@@ -103,18 +66,86 @@
           <div class="card">
             <div class="content">
               <img
-                src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
+                src="https://images.unsplash.com/photo-1452827073306-6e6e661baf57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
                 alt="Product Image"
               />
-              <h3>Product Name</h3>
+              <h3>Flowers 3</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quisquam, quae.
               </p>
             </div>
-          </div>      
-          
+          </div>
 
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1507290439931-a861b5a38200?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2064&q=80"
+                alt="Product Image"
+              />
+              <h3>Flowers 4</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1533616688419-b7a585564566?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+                alt="Product Image"
+              />
+              <h3>Flowers 5</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1567696153798-9111f9cd3d0d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+                alt="Product Image"
+              />
+              <h3>Flowers 6</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1615385639736-362b69696227?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=922&q=80"
+                alt="Product Image"
+              />
+              <h3>Flowers 7</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="content">
+              <img
+                src="https://images.unsplash.com/photo-1622658641561-fe2ca339b039?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+                alt="Product Image"
+              />
+              <h3>Flowers 8</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quisquam, quae.
+              </p>
+            </div>
+          </div>
         </container>
       </section>
     </main>
