--- a/Landing/index.html
+++ b/Landing/index.html
@@ -12,7 +12,16 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Astra</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/Landing/img/favicon.ico"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Roset</title>
   </head>
   <body>
     <nav>
